# qr-code-generator

./: README.md  pyproject.toml
src/adapters/cli/: __main__.py
src/adapters/gui/: app_tk.py
src/adapters/web/: fastapi_app.py
src/qrstudio/: __init__.py  __main__.py  commands.py  config.py  events.py
src/qrstudio/domain/: __init__.py  backgrounds.py  spec.py
src/qrstudio/encoding/: __init__.py  encoders.py
src/qrstudio/services/: __init__.py  qr_service.py
src/qrstudio/ui/: __init__.py  tk_app.py
src/text_to_qr/: __init__.py
src/text_to_qr/application/: service.py
src/text_to_qr/domain/: errors.py  models.py  ports.py
src/text_to_qr/infrastructure/: factory.py
src/text_to_qr/infrastructure/encoders/: pil_png.py  svg.py
src/text_to_qr/infrastructure/storage/: localfs.py
